--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="manifest" href="manifest.json">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="App Title">
+		<link rel="manifest" href="/manifest.json">
 		<meta name="color-scheme" content="light dark" />
 		<title>Vite + Preact</title>
 	</head>
